SERVER-74954 Incorrect result when contained $or rewrites $elemMatch extra condition.